cmake_minimum_required(VERSION 4.0)
project(CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP
#        TP2/headers/Point.h
#        TP2/sources/Point.cpp
#        TP2/headers/Forme.h
#        TP2/headers/Triangle.h
#        TP2/headers/Quadri.h
#        TP2/headers/Cercle.h
#        TP2/sources/Cercle.cpp
#        TP2/sources/Forme.cpp
#        TP2/sources/Triangle.cpp
#        TP2/sources/Quadri.cpp
##        TP2/main.cpp
#        TP1/rectangle/rectangle_2.h
#        TP1/rectangle/rectangle2.cpp
#        TP1/point/main.cpp
#        TP1/main.cpp
        #        tp/point/point.cpp
#        tp/point/point.h
#        tp/rectangle/rectangle.cpp
#        tp/rectangle/rectangle.h
#        tp/main.cpp
#        tp/base.cpp
#        tp/base.h
#        tp/deadly_diamand.cpp
#        main.cpp
#        Others/lamda_function.cpp
#        TP1/point/point.h
#        TP1/rectangle/rectangle2.cpp
#        TP1/rectangle/rectangle_2.h
#        TP1/main.cpp
#        Others/test2.cpp
#        Others/test_notion_virtual.cpp
#        Others/example/headers/vehicule.h
#        TP2/sources/Forme.cpp
#        TP2/sources/Point.cpp
#        TP2/sources/Quadri.cpp
#        TP2/sources/Triangle.cpp
#        TP2/sources/Cercle.cpp
        "Others/Examen final/Point.cpp"
        "Others/Examen final/Point.h"
        "Others/Examen final/rectangle.cpp"
        "Others/Examen final/rectangle.h"
        "Others/Examen final/main.cpp"
)
